--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -5508,18 +5508,13 @@ Media Queries
 @media (max-width: 550px) {
 	html,
 	body {
-		width: 100vw !important;
 		overflow: hidden !important;
 		display: block !important;
-		min-width: 100vw !important
 	}
 	.app-wrap {
-		position: absolute;
-		top: 0;
-		left: 0;
-		transition: left .2s ease;
+		position: relative;
 		display: block;
-		width: 300vw;
+		width: 100%;
 	}
 	.nothing-selected,
 	.feed-selected,
@@ -5528,9 +5523,56 @@ Media Queries
 		.entries-column,
 		.entry-column {
 			border-right: none !important;
-			width: 100vw !important;
+			width: 100% !important;
 			display: block !important;
-			float: left;
+			transition: left .2s linear !important;
+		}
+	}
+	.feeds-column,
+	.entries-column,
+	.entry-column {
+		position: absolute;
+	}
+	.feeds-column {
+		z-index: 100;
+	}
+	.entries-column {
+		z-index: 200;
+	}
+	.entry-column {
+		z-index: 300;
+	}
+	.nothing-selected {
+		.feeds-column {
+			left: 0;
+		}
+		.entries-column {
+			left: 100%;
+		}
+		.entry-column {
+			left: 200%;
+		}
+	}
+	.feed-selected {
+		.feeds-column {
+			left: -100%;
+		}
+		.entries-column {
+			left: 0;
+		}
+		.entry-column {
+			left: 100%;
+		}
+	}
+	.entry-selected {
+		.feeds-column {
+			left: -200%;
+		}
+		.entries-column {
+			left: -100%;
+		}
+		.entry-column {
+			left: 0;
 		}
 	}
 	.hamburger-menu,
@@ -5539,16 +5581,6 @@ Media Queries
 	}
 	.entries-header {
 		display: block;
-	}
-	.feed-selected {
-		.app-wrap {
-			left: -100vw;
-		}
-	}
-	.entry-selected {
-		.app-wrap {
-			left: -200vw;
-		}
 	}
     .nothing-selected {
 		.ui-resizable-handle {
